--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="(max-width: 799px)" href="mobil.css"/>
 <link rel="stylesheet" type="text/css" media="(min-width: 800px)" href="desktop.css"/>
+<meta charset="UTF-8">
+<meta name="description" content="amygdala_amara">
+<meta name="keywords" content="amygdala_amara, amygdala amara, amygdalaamara, amygdala, amara, music, musician, website, amygdala_amara website, tour, sweet demon, sweet, demon, we can't be the judged ones, if there's no one to judge us, single, release, news">
+<meta name="author" content="amygdala_amara">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body, html {
   height: 100%;
