--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" media="(min-width: 800px)" href="desktop.css"/>
 <meta charset="UTF-8">
 <meta name="description" content="amygdala_amara">
-<meta name="keywords" content="amygdala_amara, amygdala amara, amygdalaamara, amygdala, amara, music, musician, website, amygdala_amara website, tour, sweet demon, sweet, demon, we can't be the judged ones, if there's no one to judge us, single, release, news, amygdala_amara site, amygdala_amara online, amygdala amara site, amygdala amara website, amygdala amara online">
+<meta name="keywords" content="amygdala_amara, amygdala amara, amygdalaamara, amygdala, amara, music, musician, website, amygdala_amara website, tour, sweet demon, sweet, demon, we can't be the judged ones, if there's no one to judge us, single, release, news, amygdala_amara site, amygdala_amara online, amygdala amara site, amygdala amara website, amygdala amara online, amygdala_amara webseite, amygdala_amara musik, amygdala-amara, amygdala-amara.com">
 <meta name="author" content="amygdala_amara">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
