--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ loader.className += " hidden"; // class "loader hidden"
 </div>
 
   <div class="hero-text">
-  <div class="centered2"><center><a class="one" href="https://ffm.to/amygdala_amara"target="_blank">_NEW SONG&nbsp;&nbsp;</a> 
+  <div class="centered2"><center> 
 <a class="one" href="#super_hot_news_like_BURNING">news:12px&nbsp;&nbsp;</a>
 <a class="one" href="#about_dat_gurl">about me;}&nbsp;&nbsp;</a>
 <a class="one" href="#sick_music">/music/&nbsp;&nbsp;</a>
@@ -60,8 +60,8 @@ loader.className += " hidden"; // class "loader hidden"
   
 </div>
 
-<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="super_hot_news_like_BURNING">|</a><br>|<br>|<br>|<br>NEWS<br>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out now!<br> 
---><a class="four" href="https://ffm.to/amygdala_amara"> listen to it! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
+<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="super_hot_news_like_BURNING">|</a><br>|<br>|<br>|<br>NEWS<br>my new single "We Can't Be the Judged Ones, If There's No One to Judge Us" is out now!<br> 
+--><a class="four" href="https://ffm.to/we-cant-be-the-judged-ones"> listen to it! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
 <div class="about"><a name="about_dat_gurl"><img class="about" src="lila.png" width="290px" height="292px" ></a><p class="about1">.about amygdala_amara {</p> 
@@ -84,11 +84,11 @@ loader.className += " hidden"; // class "loader hidden"
 <br>
 
 <div class="sweetdemon"><img class="sweetdemon" src="sweetdemon.png" width="300px" height="300px">
-<h5>Sweet_Demon</h5><br><h6>my first single<br>watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//music video//</a><br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-sweet-demon-lyrics"target="_blank">//here//</a></h6></div>
+<h5>Sweet_Demon</h5><br><h6>my first single, watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//MUSIC VIDEO//</a><br><br>get / stream the song <a class="two" href="https://ffm.to/sweet_demon"target="_blank">//HERE//</a><br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-sweet-demon-lyrics"target="_blank">//HERE//</a></h6></div>
 
 
 <div class="ghibli"><img class="ghibli" src="ghibli.png" width="300px" height="300px"><h3>We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</h3> 
-<br><h4>my new song is out! <br>you can <a class="two" href="https://ffm.to/amygdala_amara"target="_blank">//listen to it//</a> now!<br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics"target="_blank">//here//</a></h4></div>
+<br><h4>my new song is out! <br>watch the <a class="two" href="https://www.youtube.com/watch?v=rpq_HBkRZgs"target="_blank">//MUSIC VIDEO//</a> now!<br><br>get / stream the song <a class="two" href="https://ffm.to/we-cant-be-the-judged-ones"target="_blank">//HERE//</a><br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics"target="_blank">//HERE//</a></h4></div>
 
 </div>
 
@@ -119,7 +119,6 @@ _ | _<br>
 <div class="thanksyou">
 <center><p class="music"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></center></p>
 <div class="gif"><center><img src="a_a gif.gif" width="177" height="68"></center></div>
-
 
 
 <body bgcolor="#000000">
