--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ loader.className += " hidden"; // class "loader hidden"
 </div>
 
 <div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="super_hot_news_like_BURNING">|</a><br>|<br>|<br>|<br>NEWS<br>my new single "We Can't Be the Judged Ones, If There's No One to Judge Us" is out now!<br> 
---><a class="four" href="https://ffm.to/we-cant-be-the-judged-ones"> listen to it! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
+--><a class="four" href="https://ffm.to/we-cant-be-the-judged-ones"target="_blank"> listen to it! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
 <div class="about"><a name="about_dat_gurl"><img class="about" src="lila.png" width="290px" height="292px" ></a><p class="about1">.about amygdala_amara {</p> 
