--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ loader.className += " hidden"; // class "loader hidden"
 <a class="one" href="#about_dat_gurl">about me;}&nbsp;&nbsp;</a>
 <a class="one" href="#sick_music">/music/&nbsp;&nbsp;</a>
 <a class="one" href="#no_dickpics_please_thanks">'contact'&nbsp;&nbsp;</a>
+<a class="one" href="#famous">_press&nbsp;&nbsp;</a>
 <span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">shop (coming soon)
 </center></div></div>
 
@@ -99,7 +100,7 @@ loader.className += " hidden"; // class "loader hidden"
 <div class="angel"><img src="angel.jpg" width="100%"></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="no_dickpics_please_thanks">contact</a></span>
-<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.com">contact@amygdala-amara.com</a><br>
+<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.com">contact@amygdala-amara.com</a><br><br><a name="famous">press photos: </a><a class="six" href="https://www.amygdala-amara.com/press"target="_blank">.{HERE}</a><br>
 _ _ _ _ _ _ _ _ _ _<br>
 _ _ | _ _<br>
 _ | _<br>
