--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html><head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" media="(max-width: 1024px)" href="mobil.css"/>
-<link rel="stylesheet" type="text/css" media="(min-width: 1025px)" href="desktop.css"/>
+<link rel="stylesheet" type="text/css" media="(max-width: 1024px)" href="mobil.css">
+<link rel="stylesheet" type="text/css" media="(min-width: 1025px)" href="desktop.css">
 <meta charset="UTF-8">
 <meta name="description" content="amygdala_amara">
 <meta name="keywords" content="amygdala_amara, amygdala amara, amygdalaamara, amygdala, amara, music, musician, website, amygdala_amara website, tour, sweet demon, sweet, demon, we can't be the judged ones, if there's no one to judge us, single, release, news, amygdala_amara site, amygdala_amara online, amygdala amara site, amygdala amara website, amygdala amara online, amygdala_amara webseite, amygdala_amara musik, amygdala-amara, amygdala-amara.com">
@@ -17,9 +15,9 @@ body, html {
 }
 </style>
 </head>
-<body>
+<body bgcolor="#000000">
 
-<div class="loader">
+<div class="loader hidden">
 <img src="loader.gif"></div>
 
 <script type="text/javascript">
@@ -31,41 +29,40 @@ loader.className += " hidden"; // class "loader hidden"
 
 <div class="hero-image">
 
- <div class="top-right"><a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"><img class="youtube" src="youtube.png" width="30" height="30"></a>
-<a class="three" href="https://soundcloud.com/amygdala_amara"target="_blank"><img class="soundcloud" src="soundcloud.png"  width="30" height="30"></a>
-<a class="three" href="https://www.instagram.com/amygdala_amara/"target="_blank"><img class="instagram" src="instagram.png" width="30" height="30"></a>
-<a class="three" href="https://www.facebook.com/amygdalaamaramusic/"target="_blank"><img class="facebook" src="facebook.png" width="30" height="30"></a>
-<a class="three" href="https://twitter.com/amygdalaamara"target="_blank"><img class="twitter" src="twitter.png"  width="30" height="30"></a>
-<a class="three" href="https://www.twitch.tv/amygdala_amara"target="_blank"><img class="twitch" src="twitch.png"  width="30" height="30"></a>
+ <div class="top-right"><a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber" target="_blank"><img class="youtube" src="youtube.png" width="30" height="30"></a>
+<a class="three" href="https://soundcloud.com/amygdala_amara" target="_blank"><img class="soundcloud" src="soundcloud.png" width="30" height="30"></a>
+<a class="three" href="https://www.instagram.com/amygdala_amara/" target="_blank"><img class="instagram" src="instagram.png" width="30" height="30"></a>
+<a class="three" href="https://www.facebook.com/amygdalaamaramusic/" target="_blank"><img class="facebook" src="facebook.png" width="30" height="30"></a>
+<a class="three" href="https://twitter.com/amygdalaamara" target="_blank"><img class="twitter" src="twitter.png" width="30" height="30"></a>
+<a class="three" href="https://www.twitch.tv/amygdala_amara" target="_blank"><img class="twitch" src="twitch.png" width="30" height="30"></a>
 
-<a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"><img class="youtube2" src="youtube2.png" width="30" height="30"></a>
-<a class="three" href="https://soundcloud.com/amygdala_amara"target="_blank"><img class="soundcloud2" src="soundcloud2.png"  width="30" height="30"></a>
-<a class="three" href="https://www.instagram.com/amygdala_amara/"target="_blank"><img class="instagram2" src="instagram2.png" width="30" height="30"></a>
-<a class="three" href="https://www.facebook.com/amygdalaamaramusic/"target="_blank"><img class="facebook2" src="facebook2.png" width="30" height="30"></a>
-<a class="three" href="https://twitter.com/amygdalaamara"target="_blank"><img class="twitter2" src="twitter2.png"  width="30" height="30"></a>
-<a class="three" href="https://www.twitch.tv/amygdala_amara"target="_blank"><img class="twitch2" src="twitch2.png"  width="30" height="30"></a></div>
+<a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber" target="_blank"><img class="youtube2" src="youtube2.png" width="30" height="30"></a>
+<a class="three" href="https://soundcloud.com/amygdala_amara" target="_blank"><img class="soundcloud2" src="soundcloud2.png" width="30" height="30"></a>
+<a class="three" href="https://www.instagram.com/amygdala_amara/" target="_blank"><img class="instagram2" src="instagram2.png" width="30" height="30"></a>
+<a class="three" href="https://www.facebook.com/amygdalaamaramusic/" target="_blank"><img class="facebook2" src="facebook2.png" width="30" height="30"></a>
+<a class="three" href="https://twitter.com/amygdalaamara" target="_blank"><img class="twitter2" src="twitter2.png" width="30" height="30"></a>
+<a class="three" href="https://www.twitch.tv/amygdala_amara" target="_blank"><img class="twitch2" src="twitch2.png" width="30" height="30"></a></div>
 
-<div class="centered"><h2 style="visibility:hidden"></h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
+<div class="centered"><h2 style="visibility:hidden"></h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></span></span></span></span></h1>
 </div>
 
   <div class="hero-text">
-  <div class="centered2"><center> 
-<a class="one" href="#super_hot_news_like_BURNING">news:12px&nbsp;&nbsp;</a>
-<a class="one" href="#about_dat_gurl">about me;}&nbsp;&nbsp;</a>
-<a class="one" href="#sick_music">/music/&nbsp;&nbsp;</a>
-<a class="one" href="#no_dickpics_please_thanks">'contact'&nbsp;&nbsp;</a>
-<a class="one" href="#famous">_press&nbsp;&nbsp;</a>
-<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">shop (coming soon)
-</center></div></div>
+  <div class="centered2"><center> <span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">.{&nbsp;&nbsp;&nbsp;<a class="one" href="#super_hot_news_like_BURNING">news;&nbsp;&nbsp;</a>
+<a class="one" href="#about_dat_gurl">about me;&nbsp;&nbsp;</a>
+<a class="one" href="#sick_music">music;&nbsp;&nbsp;</a>
+<a class="one" href="#no_dickpics_please_thanks">contact;&nbsp;&nbsp;</a>
+<a class="one" href="#famous">press;&nbsp;&nbsp;</a>
+<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">shop (coming soon);&nbsp;&nbsp;&nbsp;}
+</span></span></span></span></span></span></span></span></center></div></div>
 
   
 </div>
 
 <div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="super_hot_news_like_BURNING">|</a><br>|<br>|<br>|<br>NEWS<br>my new single "We Can't Be the Judged Ones, If There's No One to Judge Us" is out now!<br> 
---><a class="four" href="https://ffm.to/we-cant-be-the-judged-ones"target="_blank"> listen to it! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
+--&gt;<a class="four" href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank"> listen to it! </a>&lt;-- <br>|<br>|<br>|<br>|</span></span></span></span></h2></center></div>
 
 
-<div class="about"><a name="about_dat_gurl"><img class="about" src="lila.png" width="290px" height="292px" ></a><p class="about1">.about amygdala_amara {</p> 
+<div class="about"><a name="about_dat_gurl"><img class="about" src="lila.png" width="290px" height="292px"></a><p class="about1">.about amygdala_amara {</p> 
 <p class="about2">amygdala_amara is a musician from berlin, <br>who started making alternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.</p> 
 <p class="about1">}</p> 
 </div>
@@ -73,9 +70,9 @@ loader.className += " hidden"; // class "loader hidden"
 
 
 <div class="music">
-<center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="sick_music">*</a><br>*<br>*<br></center></p>
+<center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="sick_music">*</a><br>*<br>*<br></span></span></span></span></p></center><p></p>
 
-<center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to my music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735"target="_blank">  {apple music}  </a><a class="five" href="https://music.amazon.de/artists/B0894X7ZCR?ref=dm_sh_6b85-438d-dmcp-dbc2-df972&musicTerritory=DE&marketplaceId=A1PA6795UKMFR9"target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></p></center>
+<center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</span></span></span></span></h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to my music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF" target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735" target="_blank">  {apple music}  </a><a class="five" href="https://music.amazon.de/artists/B0894X7ZCR?ref=dm_sh_6b85-438d-dmcp-dbc2-df972&amp;musicTerritory=DE&amp;marketplaceId=A1PA6795UKMFR9" target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ" target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></span></span></span></span></p></center>
 </div>
 
 
@@ -85,21 +82,22 @@ loader.className += " hidden"; // class "loader hidden"
 <br>
 
 <div class="sweetdemon"><img class="sweetdemon" src="sweetdemon.png" width="300px" height="300px">
-<h5>Sweet_Demon</h5><br><h6>my first single, watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//MUSIC VIDEO//</a><br><br>get / stream the song <a class="two" href="https://ffm.to/sweet_demon"target="_blank">//HERE//</a><br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-sweet-demon-lyrics"target="_blank">//HERE//</a></h6></div>
+<h5>Sweet_Demon</h5><br><h6>my first single, watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk" target="_blank">//MUSIC VIDEO//</a><br><br>get / stream the song <a class="two" href="https://ffm.to/sweet_demon" target="_blank">//HERE//</a><br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-sweet-demon-lyrics" target="_blank">//HERE//</a></h6></div>
 
 
 <div class="ghibli"><img class="ghibli" src="ghibli.png" width="300px" height="300px"><h3>We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</h3> 
-<br><h4>my new song is out! <br>watch the <a class="two" href="https://www.youtube.com/watch?v=rpq_HBkRZgs"target="_blank">//MUSIC VIDEO//</a> now!<br><br>get / stream the song <a class="two" href="https://ffm.to/we-cant-be-the-judged-ones"target="_blank">//HERE//</a><br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics"target="_blank">//HERE//</a></h4></div>
+<br><h4>my new song is out! <br>watch the <a class="two" href="https://www.youtube.com/watch?v=rpq_HBkRZgs" target="_blank">//MUSIC VIDEO//</a> now!<br><br>get / stream the song <a class="two" href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank">//HERE//</a><br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics" target="_blank">//HERE//</a></h4></div>
 
 </div>
 
-<div class="iframe-container"><iframe width="100%"  src="https://www.youtube.com/embed/SxNuDlTxCuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-<div class="iframe-container2"><iframe width="100%" src="https://www.youtube.com/embed/rpq_HBkRZgs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+<div class="iframe-container"><iframe src="https://www.youtube.com/embed/SxNuDlTxCuk" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="100%" frameborder="0"></iframe></div>
+<div class="iframe-container2"><iframe src="https://www.youtube.com/embed/rpq_HBkRZgs" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="100%" frameborder="0"></iframe></div>
 
 <div class="angel"><img src="angel.jpg" width="100%"></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="no_dickpics_please_thanks">contact</a></span>
-<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.com">contact@amygdala-amara.com</a><br><br><a name="famous">press photos: </a><a class="six" href="https://www.amygdala-amara.com/press"target="_blank">.{HERE}</a><br>
+<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href="mailto:contact@amygdala-amara.com">contact@amygdala-amara.com</a><br>
 _ _ _ _ _ _ _ _ _ _<br>
 _ _ | _ _<br>
 _ | _<br>
@@ -113,15 +111,23 @@ _ | _<br>
 |<br>
 |<br>
 |<br>
-|<br></span></p></center>
+|<br></span></p></div></center>
+
+<div class="pressphotos"><a name="famous"><div class="pressphotos1">press</div></a><div class="pressphotos2"><a name="famous">press photos: </a><a class="six" href="https://www.amygdala-amara.com/press" target="_blank">.{HERE}</a></div></div>
+
+<div class="press"><a href="https://www.radioeins.de/programm/sendungen/modo1316/interviews/-amygdala-amara.html" target="_blank"><img class="radioeins" src="radioeins.jpg"></a>
+<a class="seven" href="https://www.radioeins.de/programm/sendungen/modo1316/interviews/-amygdala-amara.html" target="_blank">radioeins</a><br><br><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">german radio interview</span></div>
+
+
+
 
 
 <div class="thanksyou">
-<center><p class="music"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></center></p>
-<div class="gif"><center><img src="a_a gif.gif" width="177" height="68"></center></div>
+<center><p class="music"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></span></p></center><p></p>
+<div class="gif"><center><img src="a_a gif.gif" width="177" height="68"></center></div></div>
 
 
-<body bgcolor="#000000">
 
-</body>
-</html>
+
+
+</body></html>
