--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ loader.className += " hidden"; // class "loader hidden"
 
 
 <div class="ghibli"><img class="ghibli" src="ghibli.png" width="300px" height="300px"><h3>We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</h3> 
-<br><h4>my new song is out! <br>watch the <a class="two" href="https://www.youtube.com/watch?v=rpq_HBkRZgs" target="_blank">//MUSIC VIDEO//</a> now!<br><br>get / stream the song <a class="two" href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank">//HERE//</a><br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics" target="_blank">//HERE//</a></h4></div>
+<br><h4>my new song is out! <br>watch the <a class="eight" href="https://www.youtube.com/watch?v=rpq_HBkRZgs" target="_blank">//MUSIC VIDEO//</a> now!<br><br>get / stream the song <a class="eight" href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank">//HERE//</a><br><br>check out the lyrics <a class="eight" href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics" target="_blank">//HERE//</a></h4></div>
 
 </div>
 
