--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ _ | _<br>
 <div class="pressphotos"><a name="famous"><div class="pressphotos1">press</div></a><div class="pressphotos2"><a name="famous">press photos: </a><a class="six" href="https://www.amygdala-amara.com/press" target="_blank">.{HERE}</a></div></div>
 
 <div class="press"><a href="https://www.radioeins.de/programm/sendungen/modo1316/interviews/-amygdala-amara.html" target="_blank"><img class="radioeins" src="radioeins.jpg"></a>
-<a class="seven" href="https://www.radioeins.de/programm/sendungen/modo1316/interviews/-amygdala-amara.html" target="_blank">radioeins</a><br><br><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">german radio interview</span></div>
+<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">radioeins</span><br><br><a class="seven" href="https://www.radioeins.de/programm/sendungen/modo1316/interviews/-amygdala-amara.html" target="_blank">german radio interview</a></div>
 
 
 
