--- a/index.html
+++ b/index.html
@@ -94,9 +94,17 @@ loader.className += " hidden"; // class "loader hidden"
 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/SxNuDlTxCuk" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="100%" frameborder="0"></iframe></div>
 <div class="iframe-container2"><iframe src="https://www.youtube.com/embed/rpq_HBkRZgs" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="100%" frameborder="0"></iframe></div>
 
-<div class="angel"><img src="angel.jpg" width="100%"></div>
+<div class="angel"><img src="angel lila.jpg" width="100%"></div>
 
-<center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="no_dickpics_please_thanks">contact</a></span>
+<center><div class="contact">
+<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">
+|<br>
+|<br>
+|<br>
+_ | _<br>
+_ _ | _ _<br>
+_ | _<br>
+|</p></span><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="no_dickpics_please_thanks">contact</a></span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href="mailto:contact@amygdala-amara.com">contact@amygdala-amara.com</a><br>
 _ _ _ _ _ _ _ _ _ _<br>
 _ _ | _ _<br>
