--- a/experimentieren.html
+++ b/experimentieren.html
@@ -62,8 +62,8 @@ loader.className += " hidden"; // class "loader hidden"
 
 
       <div class="albumtitle"><h3>We Can't Be the Judged Ones,<br>If There's No One to Judge Us</h3></div>
-    <div class="button1"><a class="two" href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank">[&nbsp;&nbsp;&nbsp;S T R E A M&nbsp;&nbsp;/&nbsp;&nbsp;B U Y&nbsp;&nbsp;&nbsp;]</a></div>
-    <div class="button2"><a class="two" href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics">[&nbsp;&nbsp;&nbsp;L Y R I C S&nbsp;&nbsp;&nbsp;]</a></div>
+    <div class="button1"><a class="two" href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank"><&nbsp;&nbsp;&nbsp;S T R E A M&nbsp;&nbsp;/&nbsp;&nbsp;B U Y&nbsp;&nbsp;&nbsp;></a></div>
+    <div class="button2"><a class="two" href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics"><&nbsp;&nbsp;&nbsp;L Y R I C S&nbsp;&nbsp;&nbsp;></a></div>
   <img class="ghibli" src="ghibli.png">
 
 </div>
