--- a/experimentieren.html
+++ b/experimentieren.html
@@ -71,7 +71,7 @@ loader.className += " hidden"; // class "loader hidden"
 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/SxNuDlTxCuk" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="100%" frameborder="0"></iframe></div>
 <div class="iframe-container2"><iframe src="https://www.youtube.com/embed/rpq_HBkRZgs" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="100%" frameborder="0"></iframe></div>
 
-<div class="parallax"><br><br><br><br><br><br><br><br><br><br><center><div class="contact">
+<div class="parallax-contact"><br><br><br><br><br><br><br><br><br><br><center><div class="contact">
 <span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">
 |<br>
 |<br>
@@ -96,22 +96,32 @@ _ | _<br>
 |<br>
 |<br></span></div></center>
 
+</div>
+
+<div class="parallax-press"><br><br><br><br><br><br><br><br><br>
 <div class="pressphotos"><a name="press"><div class="pressphotos1">press</div></a><div class="pressphotos2"><a name="famous">press photos: </a><a class="six" href="https://www.amygdala-amara.com/press" target="_blank">.{HERE}</a></div></div>
 
 <div class="press"><a href="https://www.radioeins.de/programm/sendungen/modo1316/interviews/-amygdala-amara.html" target="_blank"><img class="radioeins" src="radioeins.jpg"></a>
 <span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">radioeins</span><br><br><a class="seven" href="https://www.radioeins.de/programm/sendungen/modo1316/interviews/-amygdala-amara.html" target="_blank">german radio interview</a></div>
 
-<center><div class="live">
+</div>
+
+<div class="parallax-live">
+
+<center><div class="live"><br><br><br><br><br><br><br><br><br>
 <span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="live">amygdala_amara live</a></span>
-<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">_____________________________________________________________________________________________________________________________<br><br><br><br>no upcoming events at the moment<br><br><br>_____________________________________________________________________________________________________________________________</span></div></center>
-
-
-<div class="thanksyou">
-<center><p class="music"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></span></p></center><p></p>
-<div class="gif"><center><img src="a_a gif.gif" width="177" height="68"></center></div></div>
-
-
+<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">_____________________________________________________________________________________________________________________________<br><br><br><br>it's fucking corona, baby<br><br><br>_____________________________________________________________________________________________________________________________</span></div></center>
 
 </div>
+
+<div class="parallax-mailinglist">
+
+<div class="thanksyou"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<center><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></span><br></center>
+<div class="gif"><center><img src="a_a gif.gif" width="177" height="68"></center></div></div>
+
+</div>
+
+
 
 </body></html>
