--- a/experimentieren.html
+++ b/experimentieren.html
@@ -44,7 +44,7 @@ loader.className += " hidden"; // class "loader hidden"
  
 
 
-<div class="centered"><h2 style="visibility:hidden"></h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></span></span></span></span></h1>
+<div class="centered"><a class="ten" href="https://amygdala-amara.com/aboutme" target="_blank">amygdala_amara</a>
 </div>
 
 <div class="streaming">
@@ -56,7 +56,6 @@ loader.className += " hidden"; // class "loader hidden"
 <a class="one" href="#contact">contact;&nbsp;&nbsp;</a>
 <a class="one" href="#press">press;&nbsp;&nbsp;</a>
 <a class="one" href="#live">live;&nbsp;&nbsp;</a>
-<a class="one" href="#mailinglist">mailing list;&nbsp;&nbsp;</a>
 <span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">shop (coming soon);&nbsp;&nbsp;&nbsp;}
 </span></span></span></span></span></span></span></span></center></div>
 
@@ -71,7 +70,7 @@ loader.className += " hidden"; // class "loader hidden"
 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/SxNuDlTxCuk" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="100%" frameborder="0"></iframe></div>
 <div class="iframe-container2"><iframe src="https://www.youtube.com/embed/rpq_HBkRZgs" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="100%" frameborder="0"></iframe></div>
 
-<div class="parallax-contact"><br><br><br><br><br><br><br><br><br><br><center><div class="contact">
+<div class="parallax-contact"><br><br><a name="contact"><br><br><br><br><br><br><br><br><center><div class="contact">
 <span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">
 |<br>
 |<br>
@@ -79,7 +78,7 @@ loader.className += " hidden"; // class "loader hidden"
 _ | _<br>
 _ _ | _ _<br>
 _ | _<br>
-|</p></span><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="contact">contact</a></span>
+|</p></span><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</a></span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href="mailto:contact@amygdala-amara.com">contact@amygdala-amara.com</a><br>
 _ _ _ _ _ _ _ _ _ _<br>
 _ _ | _ _<br>
@@ -98,8 +97,8 @@ _ | _<br>
 
 </div>
 
-<div class="parallax-press"><br><br><br><br><br><br><br><br><br>
-<div class="pressphotos"><a name="press"><div class="pressphotos1">press</div></a><div class="pressphotos2"><a name="famous">press photos: </a><a class="six" href="https://www.amygdala-amara.com/press" target="_blank">.{HERE}</a></div></div>
+<div class="parallax-press"><a name="press"><br><br><br><br><br><br><br><br><br>
+<div class="pressphotos"><div class="pressphotos1">press</div></a><div class="pressphotos2"><a name="famous">press photos / text: </a><a class="six" href="https://www.amygdala-amara.com/press" target="_blank">.{HERE}</a></div></div>
 
 <div class="press"><a href="https://www.radioeins.de/programm/sendungen/modo1316/interviews/-amygdala-amara.html" target="_blank"><img class="radioeins" src="radioeins.jpg"></a>
 <span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">radioeins</span><br><br><a class="seven" href="https://www.radioeins.de/programm/sendungen/modo1316/interviews/-amygdala-amara.html" target="_blank">german radio interview</a></div>
@@ -108,15 +107,11 @@ _ | _<br>
 
 <div class="parallax-live">
 
-<center><div class="live"><br><br><br><br><br><br><br><br><br>
-<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="live">amygdala_amara live</a></span>
+<center><div class="live"><br><br><br><br><a name="live"><br><br><br><br><br>
+<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">amygdala_amara live</a></span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">_____________________________________________________________________________________________________________________________<br><br><br><br>it's fucking corona, baby<br><br><br>_____________________________________________________________________________________________________________________________</span></div></center>
 
-</div>
-
-<div class="parallax-mailinglist">
-
-<div class="thanksyou"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div class="thanksyou"><br><br><br><br><br><br><br><br><br><br><br><br>
 <center><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></span><br></center>
 <div class="gif"><center><img src="a_a gif.gif" width="177" height="68"></center></div></div>
 
