--- a/experimentieren.html
+++ b/experimentieren.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" media="(min-width: 1025px)" href="experiment desktop.css">
 <meta charset="UTF-8">
 <meta name="description" content="amygdala_amara">
-<meta name="keywords" content="amygdala_amara, amygdala amara, amygdalaamara, amygdala, amara, music, musician, website, amygdala_amara website, tour, sweet demon, sweet, demon, we can't be the judged ones, if there's no one to judge us, single, release, news, amygdala_amara site, amygdala_amara online, amygdala amara site, amygdala amara website, amygdala amara online, amygdala_amara webseite, amygdala_amara musik, amygdala-amara, amygdala-amara.com">
+<meta name="keywords" content="amygdala_amara, amygdala amara, amygdala-amara.com">
 <meta name="author" content="amygdala_amara">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -44,7 +44,7 @@ loader.className += " hidden"; // class "loader hidden"
  
 
 
-<div class="centered"><a class="ten" href="https://amygdala-amara.com/aboutme" target="_blank">amygdala_amara</a>
+<div class="centered"><a class="ten" href="#top">amygdala_amara</a>
 </div>
 
 <div class="streaming">
@@ -61,9 +61,9 @@ loader.className += " hidden"; // class "loader hidden"
 
 
       <div class="albumtitle"><h3>We Can't Be the Judged Ones,<br>If There's No One to Judge Us</h3></div>
-    <a href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank" class="button1">B U Y&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;S T R E A M</a><p>
+    <a href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank" class="button1">BUY&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;STREAM</a><p>
     
-<a href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics" target="_blank" class="button2">L Y R I C S</a>
+<a href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics" target="_blank" class="button2">LYRICS</a>
 
   <img class="ghibli" src="ghibli.png">
 
