--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ _ | _<br>
 
 <center><div class="live"><br><br><br><br><br><br><a name="live"><br><br><br>
 <span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">amygdala_amara live</a></span>
-<p><br><br><hr size="1"><br><br><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">it's fucking corona, baby</span><br><br><br><hr size="1"></span></div></center>
+<p><br><br><hr size="1" style="color:#00FF00" ><br><br><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">it's fucking corona, baby</span><br><br><br><hr size="1" style="color:#00FF00"></span></div></center>
 
 <div class="thanksyou"><br><br><br><br><br><br><br><br><br><br><br><br>
 <center><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></span><br></center>
