--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@ loader.className += " hidden"; // class "loader hidden"
 </div>
 
   <div class="hero-text">
-<center> <span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">.{&nbsp;&nbsp;&nbsp;
-<a class="one" href="#contact">contact;&nbsp;&nbsp;</a>
+<center> <span class="headerspan">.{&nbsp;&nbsp;&nbsp;
+</span><a class="one" href="#contact">contact;&nbsp;&nbsp;</a>
 <a class="one" href="#press">press;&nbsp;&nbsp;</a>
 <a class="one" href="#live">live;&nbsp;&nbsp;</a>
-<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">shop (coming soon);&nbsp;&nbsp;&nbsp;}
-</span></span></span></span></span></span></span></span></center></div>
+<span class="headerspan">shop (coming soon);&nbsp;&nbsp;&nbsp;}
+</span></center></div>
 
 
       <div class="albumtitle"><h3>We Can't Be the Judged Ones,<br>If There's No One to Judge Us</h3></div>
