--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ loader.className += " hidden"; // class "loader hidden"
     
 <a href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics" target="_blank" class="button2">LYRICS</a>
 
- <a href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank" class="albumlink"><img class="ghibli" src="ghibli.png"></a>
+ <a href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank" class="albumlink"><img class="ghibli" src="ghibli.jpg"></a>
 
 
   </div>
