--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<div class="order"><a class="two">OUT 13TH OKTOBER<br>PRE-ORDER NOW!</a></div>
+<div class="order"><a class="two">OUT SOON<br>STAY TUNED!</a></div>
 
 
 
