--- a/Confirmation Mail.html
+++ b/Confirmation Mail.html
@@ -13,7 +13,7 @@
             </td>
         </tr>
 <tr><td style="height: 75px; line-height: 75px; width: 100%; vertical-align: middle; padding: 0 60px;"><div class="mj-opt-in-display-text paint-area paint-area--text" style="text-align: left; color: #2e3240; margin-bottom: 90px; margin-top: 10px; line-height: normal;" contenteditable="true">
-        *<br><br>*<br><br><br>*<br><br><br>Hey, you little person from the internet,<br><br>I feel honored, that you wanna hear from me from time to time.<br>Now you just have to hit the subscribe button down there for the very last time and I keep you updated about some stuff... about music and merch, hopefully about an upcoming tour, about life. Maybe a couple of recipes too. Or maybe not, we have to see.<br><br>If you just changed your mind simply ignore this email. If not - I'm thrilled about everything that awaits us. Do you already feel it?<br><br>Love, L 💜</div></td></tr>
+        *<br><br>*<br><br><br>*<br><br><br>Hey, you little person from the internet,<br><br>I feel honored, that you wanna hear from me from time to time.<br>Now you just have to hit the subscribe button down there for the very last time and I keep you updated about some stuff... about music and merch, about upcoming live events, about life. Maybe a couple of recipes too. Or maybe not, we have to see.<br><br>If you just changed your mind simply ignore this email. If not - I'm thrilled about everything that awaits us. Do you already feel it?<br><br>Love, L 💜</div></td></tr>
         <tr>
             <td style="padding-bottom: 90px; text-align: center;">
                 <data id="start-link"></data>
