--- a/Mailjet Confirmation Paige.html
+++ b/Mailjet Confirmation Paige.html
@@ -9,7 +9,7 @@
     <div class="mj-confirmation-page-content" style="text-align: center;">
         <div style="display: table; height: 70px; width: 100%;">
             <div style="display: table-cell; vertical-align: middle;">
-                <div class="mj-confirmation-page-text" style="color: #2e3240; font-family:Times, serif; font-size: 20px; display: inline-block; margin-bottom: 30px; margin-top: 30px;" contenteditable="true">*<br><br>*<br><br><br>*<br><br><br>C O N G R A T U L A T I O N S _ Y O U _ H A V E _ S U C C E S S F U L L Y _ S U B S C R I B E D<br><br><br>*<br><br><br>*<br><br>*</div>
+                <div class="mj-confirmation-page-text" style="color: #2e3240; font-family:Times, serif; font-size: 20px; display: inline-block; margin-bottom: 30px; margin-top: 30px;" contenteditable="true">*<br><br>*<br><br><br>*<br><br><br>C&nbsp;O&nbsp;N&nbsp;G&nbsp;R&nbsp;A&nbsp;T&nbsp;U&nbsp;L&nbsp;A&nbsp;T&nbsp;I&nbsp;O&nbsp;N&nbsp;S&nbsp;_ Y&nbsp;O&nbsp;U&nbsp;_ H&nbsp;A&nbsp;V&nbsp;E&nbsp;_ S&nbsp;U&nbsp;C&nbsp;C&nbsp;E&nbsp;S&nbsp;S&nbsp;F&nbsp;U&nbsp;L&nbsp;L&nbsp;Y&nbsp;_ S&nbsp;U&nbsp;B&nbsp;S&nbsp;C&nbsp;R&nbsp;I&nbsp;B&nbsp;E D<br><br><br>*<br><br><br>*<br><br>*</div>
             </div>
         </div>
     </div>
