--- a/Mailjet Confirmation Mail.html
+++ b/Mailjet Confirmation Mail.html
@@ -7,12 +7,12 @@
     </tbody></table>
     <table class="mockup-content paint-area" style="width: 100%; background-color: white; font-family: Times, serif; border-collapse: collapse;">
         <tbody><tr style="text-align: center; padding: 0 0 20px 0;">
-            <td style="height: 75px; line-height: 75px; width: 100%; vertical-align: middle;">
-                <span class="mj-opt-in-subscribe-title paint-area paint-area--text" style="font-family: Times, serif; font-size: 16.5px; color: #2e3240; line-height: normal;" contenteditable="true"><b class="medium-b">{ P L E A S E / C O N F I R M / Y O U R / S U B S C R I P T I O N }</b>
+            <td style="padding: 0 9.5% 0 9%; height: 75px; line-height: 75px; width: 100%; vertical-align: middle;">
+                <span class="mj-opt-in-subscribe-title paint-area paint-area--text" style="font-family: Times, serif; font-size: 16.5px; color: #2e3240; line-height: normal;" contenteditable="true"><b class="medium-b"> {&nbsp;P&nbsp;L&nbsp;E&nbsp;A&nbsp;S&nbsp;E&nbsp;/ C&nbsp;O&nbsp;N&nbsp;F&nbsp;I&nbsp;R&nbsp;M&nbsp;/ Y&nbsp;O&nbsp;U&nbsp;R&nbsp;/ S&nbsp;U&nbsp;B&nbsp;S&nbsp;C&nbsp;R&nbsp;I&nbsp;P&nbsp;T&nbsp;I&nbsp;O&nbsp;N&nbsp;}</b>
                 </span>
             </td>
         </tr>
-<tr><td style="height: 75px; line-height: 75px; width: 100%; vertical-align: middle; padding: 0 60px;"><div class="mj-opt-in-display-text paint-area paint-area--text" style="text-align: left; color: #2e3240; margin-bottom: 90px; margin-top: 10px; line-height: normal;" contenteditable="true">
+<tr><td style="height: 75px; line-height: 75px; width: 100%; vertical-align: middle; padding: 0 10%;"><div class="mj-opt-in-display-text paint-area paint-area--text" style="text-align: left; color: #2e3240; margin-bottom: 90px; margin-top: 10px; line-height: normal;" contenteditable="true">
         *<br><br>*<br><br><br>*<br><br><br>Hey, you little person from the internet,<br><br>I feel honored, that you wanna hear from me from time to time.<br>Now you just have to hit the subscribe button down there for the very last time and I keep you updated about some stuff... about music and merch, about upcoming live events, about life. Maybe a couple of recipes too. Or maybe not, we have to see.<br><br>If you just changed your mind simply ignore this email. If not - I'm thrilled about everything that awaits us. Do you already feel it?<br><br>Love, L 💜</div></td></tr>
         <tr>
             <td style="padding-bottom: 90px; text-align: center;">
@@ -27,6 +27,6 @@
                 <data id="end-link"></data>
             </td>
         </tr>
-        <tr><td style="text-align: left; height: 75px; line-height: 75px; width: 100%; vertical-align: middle; padding: 0 60px;"><div class="mj-opt-in-footer paint-area paint-area--text" style="display: inline-block; font-family: Times, serif; text-align: left; margin-bottom: 24px; color: #2e3240; line-height: normal;" contenteditable="true"><i class="medium-i" style="word-break: break-all;">If you are having troubles with the button, copy/paste the following URL in your browser: [URL]</i></div></td></tr>
+        <tr><td style="text-align: left; height: 75px; line-height: 75px; width: 100%; vertical-align: middle; padding: 0 10%;"><div class="mj-opt-in-footer paint-area paint-area--text" style="display: inline-block; font-family: Times, serif; text-align: left; margin-bottom: 24px; color: #2e3240; line-height: normal;" contenteditable="true"><i class="medium-i" style="word-break: break-all;">If you are having troubles with the button, copy/paste the following URL in your browser: [URL]</i></div></td></tr>
            </tbody></table>
 </div>
