--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div class="artist_name"><a class="one">amygdala_amara</a></div>
+<div class="artist_name"><a class="one" href="https://amygdala-amara.com/">amygdala_amara</a></div>
 <div class="header"></div>
 
 
@@ -22,15 +22,15 @@
 <div class="tour"><a class="three">TOUR</a></div>
 <div class="bracketleft"><a class="four">{</a></div>
 <div class="socialmedia">
-<img class="spotify_white" src="spotify_white.svg">
-<img class="applemusic_white" src="applemusic_white.svg">
-<img class="youtube_white" src="youtube_white.svg">
-<img class="facebook_white" src="facebook_white.svg">
-<img class="instagram_white" src="instagram_white.svg">
-<img class="twitter_white" src="twitter_white.svg">
+<a href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF" target="_blank"><img class="spotify_white" src="spotify_white.svg"></a>
+<a href="https://music.apple.com/us/artist/amygdala-amara/1513588735" target="_blank"><img class="applemusic_white" src="applemusic_white.svg"></a>
+<a href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber" target="_blank"><img class="youtube_white" src="youtube_white.svg"></a>
+<a href="https://www.facebook.com/amygdalaamaramusic/" target="_blank"><img class="facebook_white" src="facebook_white.svg"></a>
+<a href="https://www.instagram.com/amygdala_amara/" target="_blank"><img class="instagram_white" src="instagram_white.svg"></a>
+<a href="https://twitter.com/amygdalaamara" target="_blank"><img class="twitter_white" src="twitter_white.svg"></a>
 </div>
 <div class="bracketright"><a class="four">}</a></div>
-<div class="store"><a class="three">STORE</a></div>
+<div class="store"><a class="three" href="https://shop.spreadshirt.de/amygdala-amara/" target="_blank">STORE</a></div>
 </div>
 
 <div class="secondbottomline">
