--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <a href="https://twitter.com/amygdalaamara" target="_blank"><img class="twitter_white" src="twitter_white.svg"></a>
 </div>
 <div class="bracketright"><a class="four">}</a></div>
-<div class="store"><a class="three" href="https://shop.spreadshirt.de/amygdala-amara/" target="_blank">STORE</a></div>
+<div class="store"><a class="three" href="https://shop.spreadshirt.de/amygdala-amara/all" target="_blank">STORE</a></div>
 </div>
 
 <div class="secondbottomline">
