--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<div class="order"><a class="two">ABOUT TO BEGIN ...<br>KEEP BOTH EYES OPEN!</a></div>
+<div class="order"><a class="two">#OOFFOO<br>OUT NOW!</a></div>
 
 
 
