--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="bottom_area">
 <div class="firstbottomline">
-<div class="tour"><a class="three">TOUR</a></div>
+<div class="tour"><a class="three">DATES</a></div>
 <div class="bracketleft"><a class="four">{</a></div>
 <div class="socialmedia">
 <a href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF" target="_blank"><img class="spotify_white" src="spotify_white.svg"></a>
@@ -33,15 +33,8 @@
 <div class="store"><a class="three" href="https://shop.spreadshirt.de/amygdala-amara/all" target="_blank">STORE</a></div>
 </div>
 
-<div class="secondbottomline">
 
-<iframe class="subscription_widget" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://app.mailjet.com/widget/iframe/6U89/JHS" width="100%" height="39px"></iframe>
-
-<script type="text/javascript" src="https://app.mailjet.com/statics/js/iframeResizer.min.js"></script>
-
-</div>
-
-<div class="thirdbottomline"><div class="copyright"><a class="five">© 2022 amygdala_amara</a></div><div class="allrightsreserved"><a class="six">all rights reserved</a></div>
+<div class="secondbottomline"><div class="copyright"><a class="five">© 2022 amygdala_amara</a></div><div class="allrightsreserved"><a class="six">all rights reserved</a></div>
 
 </div>
 </div>
